new file:   .vscode/settings.json
